# poker-bot

./: .gitignore  README.md  pyproject.toml
report/: deep_cfr_2p_2h_report.md
scripts/: evaluate.py  train.py  train_deep_cfr.py
src/poker_bot/: __init__.py
src/poker_bot/abstraction/: __init__.py  action_abstraction.py  card_abstraction.py
src/poker_bot/agents/: __init__.py  base.py  call_agent.py  random_agent.py
src/poker_bot/agents/cfr/: __init__.py  infoset.py  mccfr.py  strategy.py
src/poker_bot/agents/deep_cfr/: __init__.py  agent.py  deep_cfr.py  encoder.py  network.py  reservoir.py
src/poker_bot/evaluation/: __init__.py  evaluator.py  metrics.py
src/poker_bot/game/: __init__.py  action.py  card.py  engine.py  hand_rank.py  state.py
src/poker_bot/training/: __init__.py  self_play.py  trainer.py
src/poker_bot/utils/: config.py  logging.py
tests/: conftest.py
tests/agents/: test_deep_cfr.py  test_mccfr.py
tests/evaluation/: test_evaluator.py
tests/game/: test_card.py  test_engine.py  test_hand_rank.py
