[project]
name = "poker-bot"
version = "0.1.0"
description = "Unlimited Texas Hold'em poker bot using MCCFR + Deep CFR"
requires-python = ">=3.12"
dependencies = [
    "phevaluator>=0.5.0",
    "numpy>=2.0",
    "torch>=2.3",
    "gymnasium>=0.29",
    "rich>=13.0",
    "typer>=0.12",
    "loguru>=0.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
train = "scripts.train:app"
evaluate = "scripts.evaluate:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/poker_bot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT", "RUF"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "PT011"]
"scripts/**" = ["ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["phevaluator.*", "gymnasium.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short", "--cov=src/poker_bot", "--cov-report=term-missing"]
